--- a/index.html
+++ b/index.html
@@ -127,6 +127,31 @@
 </section>
 <script src="Dashboard.js"></script>
 
+    <section class="testimonials">
+    <h2>Kundenmeinungen</h2>
+    <div class="testimonial-cards">
+        <div class="testimonial-card">
+            <img src="person1.jpg" alt="Sarah Johnson">
+            <h3>Sarah Johnson</h3>
+            <p class="position">Small Business Owner</p>
+            <p class="testimonial-text">Since integrating this solution into our workflow, we've experienced a significant improvement in efficiency and collaboration.</p>
+        </div>
+        <div class="testimonial-card">
+            <img src="person2.jpg" alt="David Patel">
+            <h3>David Patel</h3>
+            <p class="position">Project Manager</p>
+            <p class="testimonial-text">I've tested numerous options in this category, but one stands out for its intuitive design and comprehensive functionality.</p>
+        </div>
+        <div class="testimonial-card">
+            <img src="person3.jpg" alt="Emily Carter">
+            <h3>Emily Carter</h3>
+            <p class="position">Operations Manager</p>
+            <p class="testimonial-text">The tool we've adopted has surpassed our expectations, providing invaluable insights and support as our business continues to grow.</p>
+        </div>
+    </div>
+</section>
+
+
     </section>
 
     <footer>
