--- a/index.html
+++ b/index.html
@@ -150,6 +150,60 @@
         </div>
     </div>
 </section>
+<section class="faq-section">
+    <div class="faq-header">
+        <h2>Frequently Asked Questions</h2>
+        <p>For other questions, you can find them on the FAQ page, or you can also submit a question that you would like to ask.</p>
+        <a href="#" class="see-more-button">See More →</a>
+    </div>
+    <div class="faq-accordion">
+        <div class="faq-item">
+            <button class="faq-question">
+                <span>1. What is Automoz, and how does it work?</span>
+                <span class="icon">+</span>
+            </button>
+            <div class="faq-answer">
+                Automoz is a social media automation platform designed for small businesses and startups. It helps you manage and grow your online presence by automating engagement, scheduling posts, and tracking performance across multiple social media platforms.
+            </div>
+        </div>
+        <div class="faq-item">
+            <button class="faq-question">
+                <span>2. How many social media accounts can I connect?</span>
+                <span class="icon">+</span>
+            </button>
+            <div class="faq-answer">
+                You can connect up to 10 social media accounts with the basic plan. For more accounts, consider upgrading to a higher plan.
+            </div>
+        </div>
+        <div class="faq-item">
+            <button class="faq-question">
+                <span>3. Can I upgrade or downgrade my plan later?</span>
+                <span class="icon">+</span>
+            </button>
+            <div class="faq-answer">
+                Yes, you can upgrade or downgrade your plan anytime based on your needs. Simply go to the settings page to manage your subscription.
+            </div>
+        </div>
+        <div class="faq-item">
+            <button class="faq-question">
+                <span>4. What social media platforms are supported?</span>
+                <span class="icon">+</span>
+            </button>
+            <div class="faq-answer">
+                Automoz supports Facebook, Twitter, Instagram, LinkedIn, and Pinterest. More platforms are added regularly.
+            </div>
+        </div>
+        <div class="faq-item">
+            <button class="faq-question">
+                <span>5. Do I need a large team to manage Automoz?</span>
+                <span class="icon">+</span>
+            </button>
+            <div class="faq-answer">
+                No, Automoz is designed to be user-friendly and can be managed by a single person or a small team.
+            </div>
+        </div>
+    </div>
+</section>
 
 
     </section>
