--- a/index.html
+++ b/index.html
@@ -207,6 +207,53 @@
 
 
     </section>
+    ...
+<section class="faq-section">
+    <div class="faq-header">
+        <h2>Frequently Asked Questions</h2>
+        <p>For other questions, you can find them on the FAQ page, or you can also submit a question that you would like to ask.</p>
+        <a href="#" class="see-more-button">See More →</a>
+    </div>
+    <div class="faq-accordion">
+        <div class="faq-item">
+            <button class="faq-question">
+                <span>1. What is Automoz, and how does it work?</span>
+                <span class="icon">+</span>
+            </button>
+            <div class="faq-answer">
+                Automoz is a social media automation platform designed for small businesses and startups. It helps you manage and grow your online presence by automating engagement, scheduling posts, and tracking performance across multiple social media platforms.
+            </div>
+        </div>
+        <!-- Weitere FAQ-Elemente hier -->
+    </div>
+</section>
+
+<!-- JavaScript für das Akkordeon -->
+<script>
+    document.querySelectorAll('.faq-question').forEach(button => {
+        button.addEventListener('click', () => {
+            const faqItem = button.parentElement;
+            const faqAnswer = faqItem.querySelector('.faq-answer');
+            const icon = button.querySelector('.icon');
+
+            if (faqAnswer.style.display === 'block') {
+                faqAnswer.style.display = 'none';
+                icon.textContent = '+';
+            } else {
+                document.querySelectorAll('.faq-answer').forEach(answer => {
+                    answer.style.display = 'none';
+                });
+                document.querySelectorAll('.icon').forEach(icn => {
+                    icn.textContent = '+';
+                });
+                faqAnswer.style.display = 'block';
+                icon.textContent = '−';
+            }
+        });
+    });
+</script>
+
+
 
     <footer>
         <div class="footer-content" style="padding: 40px 20px;"> <!-- Footer-Bereich mit Padding -->
