--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                 <ul> <!-- Navigationsliste ohne Aufzählungszeichen -->
                     <li><a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Für Gewerke</a></li> <!-- Link für Gewerke -->
                     <li><a href="#" class="login-button">Login</a></li> <!-- Link für Login mit spezieller Button-Klasse -->
-                    <li><a href="#" class="register-button">Registrieren</a></li> <!-- Link für Registrierung mit spezieller Button-Klasse -->
+                    <li><a href="#" class="register-button" style="background-color: #anothercolor;">Registrieren</a>
+ <!-- Link für Registrierung mit spezieller Button-Klasse -->
                 </ul>
             </nav>
         </div>
