--- a/index.html
+++ b/index.html
@@ -79,6 +79,38 @@
         <a href="#" class="service-link"> Mehr zu Fenster</a>
     </div>
 </section>
+
+    <section class="journey-section">
+    <h2>Your Foodiefare journey starts here 👨‍🍳</h2>
+    <div class="journey-steps">
+        <div class="step">
+            <div class="icon">👤</div>
+            <h3>Register</h3>
+            <p>Open your catering service at Profile page at Foodiefare App</p>
+        </div>
+        <div class="step">
+            <div class="icon">✔️</div>
+            <h3>Verified</h3>
+            <p>Complete your data to get verified and start selling</p>
+        </div>
+        <div class="step active">
+            <div class="icon">🛒</div>
+            <h3>Orders</h3>
+            <p>The customers place their orders via app</p>
+        </div>
+        <div class="step">
+            <div class="icon">🚚</div>
+            <h3>Pick up & delivery</h3>
+            <p>Our drivers will pick up to deliver your food</p>
+        </div>
+        <div class="step">
+            <div class="icon">💰</div>
+            <h3>Receive your payment!</h3>
+            <p>You'll receive your payment on the same day each month</p>
+        </div>
+    </div>
+</section>
+
 <section class="for-energy-advisors">
     <h2>Projekte vermitteln & Ihre Arbeit optimieren</h2>
     <p>
