--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                 <ul> <!-- Navigationsliste ohne Aufzählungszeichen -->
                     <li><a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Für Gewerke</a></li> <!-- Link für Gewerke -->
                     <li><a href="#" class="login-button">Login</a></li> <!-- Link für Login mit spezieller Button-Klasse -->
-                    <li><a href="#" class="register-button" style="background-color: #anothercolor;">Registrieren</a>
- <!-- Link für Registrierung mit spezieller Button-Klasse -->
+                   <li><a href="#" class="register-button" style="background-color: #698F44;">Registrieren</a></li>
                 </ul>
             </nav>
         </div>
@@ -207,31 +206,9 @@
         </div>
     </div>
 </section>
-
-
-    </section>
-    ...
-<section class="faq-section">
-    <div class="faq-header">
-        <h2>Frequently Asked Questions</h2>
-        <p>For other questions, you can find them on the FAQ page, or you can also submit a question that you would like to ask.</p>
-        <a href="#" class="see-more-button">See More →</a>
-    </div>
-    <div class="faq-accordion">
-        <div class="faq-item">
-            <button class="faq-question">
-                <span>1. What is Automoz, and how does it work?</span>
-                <span class="icon">+</span>
-            </button>
-            <div class="faq-answer">
-                Automoz is a social media automation platform designed for small businesses and startups. It helps you manage and grow your online presence by automating engagement, scheduling posts, and tracking performance across multiple social media platforms.
-            </div>
-        </div>
-        <!-- Weitere FAQ-Elemente hier -->
     </div>
 </section>
 
-<!-- JavaScript für das Akkordeon -->
 <script>
     document.querySelectorAll('.faq-question').forEach(button => {
         button.addEventListener('click', () => {
@@ -255,8 +232,6 @@
         });
     });
 </script>
-
-
 
     <footer>
         <div class="footer-content" style="padding: 40px 20px;"> <!-- Footer-Bereich mit Padding -->
