--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <section class="services" style="display: flex; justify-content: center; gap: 40px; padding: 40px 50px; flex-wrap: wrap;">
     <!-- Service-Sektion mit Flexbox-Anordnung und automatischem Zeilenumbruch -->
-    <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
+    <div class="service-item" style="padding: 20px; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
         <!-- Einzelner Service-Kasten mit Schatten, Hintergrundfarbe und abgerundeten Ecken -->
         <div class="service-item-header">
             <h3 style="margin: 0; color: #222; font-weight: 700;">Photovoltaik</h3>
