--- a/index.html
+++ b/index.html
@@ -160,51 +160,70 @@
     <div class="faq-accordion">
         <div class="faq-item">
             <button class="faq-question">
-                <span>1. What is Automoz, and how does it work?</span>
+                <span>1. Welche Vorteile bietet eenetzwerk.de für Energieberater?</span>
                 <span class="icon">+</span>
             </button>
             <div class="faq-answer">
-                Automoz is a social media automation platform designed for small businesses and startups. It helps you manage and grow your online presence by automating engagement, scheduling posts, and tracking performance across multiple social media platforms.
+                Energieberater profitieren von einer zentralen Plattform für die Vermittlung von Projekten, transparenten Arbeitsabläufen und der Vernetzung mit vertrauenswürdigen Handwerksbetrieben.
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">
-                <span>2. How many social media accounts can I connect?</span>
+                <span>2. Wie funktioniert die Datenerfassung vor Ort?</span>
                 <span class="icon">+</span>
             </button>
             <div class="faq-answer">
-                You can connect up to 10 social media accounts with the basic plan. For more accounts, consider upgrading to a higher plan.
+                Unsere digitale Datenerfassungsfunktion ermöglicht es Ihnen, alle wichtigen Informationen vor Ort beim Kunden einfach und effizient zu sammeln und in die Plattform zu integrieren.
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">
-                <span>3. Can I upgrade or downgrade my plan later?</span>
+                <span>3. Wie kann ich ein Projekt erstellen?</span>
                 <span class="icon">+</span>
             </button>
             <div class="faq-answer">
-                Yes, you can upgrade or downgrade your plan anytime based on your needs. Simply go to the settings page to manage your subscription.
+                Als registrierter Energieberater können Sie ein neues Projekt in Ihrem Dashboard anlegen, indem Sie die relevanten Daten eingeben und passende Partner auswählen.
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">
-                <span>4. What social media platforms are supported?</span>
+                <span>4. Wie schütze ich meine Kunden vor unseriösen Anbietern?</span>
                 <span class="icon">+</span>
             </button>
             <div class="faq-answer">
-                Automoz supports Facebook, Twitter, Instagram, LinkedIn, and Pinterest. More platforms are added regularly.
+                Wir prüfen die Handwerksbetriebe und Installateure sorgfältig, bevor sie auf der Plattform zugelassen werden. So können Sie sicher sein, nur mit qualifizierten Partnern zu arbeiten.
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">
-                <span>5. Do I need a large team to manage Automoz?</span>
+                <span>5. Kann ich mein Beratungsunternehmen auf der Plattform verwalten?</span>
                 <span class="icon">+</span>
             </button>
             <div class="faq-answer">
-                No, Automoz is designed to be user-friendly and can be managed by a single person or a small team.
+                Ja, in Ihrem Dashboard finden Sie eine spezielle Sektion zur Verwaltung Ihres Beratungsunternehmens, einschließlich Benutzerdaten und Projektübersicht.
+            </div>
+        </div>
+        <div class="faq-item">
+            <button class="faq-question">
+                <span>6. Sind meine Daten sicher?</span>
+                <span class="icon">+</span>
+            </button>
+            <div class="faq-answer">
+                Wir legen großen Wert auf Datensicherheit. Ihre Daten werden verschlüsselt und nach höchsten Sicherheitsstandards gespeichert.
+            </div>
+        </div>
+        <div class="faq-item">
+            <button class="faq-question">
+                <span>7. Wie kann ich ein Projekt abschließen?</span>
+                <span class="icon">+</span>
+            </button>
+            <div class="faq-answer">
+                Sobald alle Arbeiten erfolgreich durchgeführt wurden, können Sie das Projekt im Dashboard als abgeschlossen markieren.
             </div>
         </div>
     </div>
 </section>
+
     </div>
 </section>
 
