--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a href="#" class="service-link">Mehr zu Photovoltaik</a>
     </div>
 
-    <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
+    <div class="service-item" style="padding: 20px; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
         <div class="service-item-header">
             <h3 style="margin: 0; color: #222; font-weight: 700;">Heizung</h3>
             <img src="Heizung.png" alt="Heizung Icon" style="width: 120px; height: auto; margin-left: auto;">
@@ -60,7 +60,7 @@
         <a href="#" class="service-link">Mehr zu Heizung</a>
     </div>
 
-    <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
+    <div class="service-item" style="padding: 20px; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
         <div class="service-item-header">
             <h3 style="margin: 0; color: #222; font-weight: 700;">Dämmung</h3>
             <img src="Heizung.png" alt="Dämmung Icon" style="width: 120px; height: auto; margin-left: auto;">
@@ -69,7 +69,7 @@
         <a href="#" class="service-link">Mehr zu Dämmung</a>
     </div>
 
-    <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
+    <div class="service-item" style="padding: 20px; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
         <div class="service-item-header">
             <h3 style="margin: 0; color: #222; font-weight: 700;">Fenster</h3>
             <img src="Heizung.png" alt="Dämmung Icon" style="width: 120px; height: auto; margin-left: auto;">
