--- a/index.html
+++ b/index.html
@@ -126,53 +126,51 @@
     <p>
         Mit <strong>eenetzwerk.de</strong> optimieren Sie als Energieberater*in Ihre Sanierungsprojekte. Unsere Plattform verbindet Sie nahtlos mit Installateuren und Handwerksbetrieben und schafft eine effiziente Grundlage für die Planung und Umsetzung nachhaltiger Maßnahmen im Gebäudesektor. Profitieren Sie von einer zentralen digitalen Schnittstelle, die Zusammenarbeit vereinfacht und Ihre Projekte zum Erfolg führt.
     </p>
-</section>
-<script src="Dashboard.js"></script>
 <section class="process-section">
-    <h2 class="process-heading">Ihre Journey mit eenetzwerk.de beginnt hier 🏠</h2>
+    <h2 class="white-text-header">Ihre Journey mit eenetzwerk.de beginnt hier 🏠</h2>
     <div class="process-container">
         <div class="process-step">
             <div class="process-icon">
                 <img src="register-icon.png" alt="Registrieren">
             </div>
-            <h3>Registrieren</h3>
-            <p>Erstellen Sie Ihr Profil auf eenetzwerk.de und melden Sie sich als Energieberater an, um die Plattform vollständig nutzen zu können.</p>
+            <h3 class="white-text-header">Registrieren</h3>
+            <p class="white-text-body">Erstellen Sie Ihr Profil auf eenetzwerk.de und melden Sie sich als Energieberater an, um die Plattform vollständig nutzen zu können.</p>
         </div>
 
         <div class="process-step">
             <div class="process-icon">
                 <img src="data-icon.png" alt="Datenaufnahme">
             </div>
-            <h3>Datenaufnahme</h3>
-            <p>Erfassen Sie detaillierte Daten vor Ort beim Kunden, um eine fundierte Grundlage für die Projektplanung zu schaffen.</p>
+            <h3 class="white-text-header">Datenaufnahme</h3>
+            <p class="white-text-body">Erfassen Sie detaillierte Daten vor Ort beim Kunden, um eine fundierte Grundlage für die Projektplanung zu schaffen.</p>
         </div>
 
         <div class="process-step">
             <div class="process-icon">
                 <img src="project-icon.png" alt="Projekt erstellen">
             </div>
-            <h3>Projekt erstellen</h3>
-            <p>Erstellen Sie ein neues Projekt basierend auf den erfassten Daten und den spezifischen Anforderungen des Kunden.</p>
+            <h3 class="white-text-header">Projekt erstellen</h3>
+            <p class="white-text-body">Erstellen Sie ein neues Projekt basierend auf den erfassten Daten und den spezifischen Anforderungen des Kunden.</p>
         </div>
 
         <div class="process-step">
             <div class="process-icon">
                 <img src="tender-icon.png" alt="Ausschreibung starten">
             </div>
-            <h3>Ausschreibung starten</h3>
-            <p>Geben Sie das Projekt zur Ausschreibung frei und machen Sie es für qualifizierte Installateure und Handwerker sichtbar.</p>
+            <h3 class="white-text-header">Ausschreibung starten</h3>
+            <p class="white-text-body">Geben Sie das Projekt zur Ausschreibung frei und machen Sie es für qualifizierte Installateure und Handwerker sichtbar.</p>
         </div>
 
         <div class="process-step">
             <div class="process-icon">
                 <img src="offer-icon.png" alt="Passendes Angebot wählen">
             </div>
-            <h3>Passendes Angebot wählen</h3>
-            <p>Vergleichen Sie die eingegangenen Angebote und wählen Sie das passende Angebot für die effiziente Umsetzung der Maßnahmen aus.</p>
+            <h3 class="white-text-header">Passendes Angebot wählen</h3>
+            <p class="white-text-body">Vergleichen Sie die eingegangenen Angebote und wählen Sie das passende Angebot für die effiziente Umsetzung der Maßnahmen aus.</p>
         </div>
     </div>
 </section>
-
+    
     <section class="testimonials">
     <h2>Kundenmeinungen</h2>
     <div class="testimonial-cards">
